--- a/92-appendixC.Rmd
+++ b/92-appendixC.Rmd
@@ -16,6 +16,16 @@ resource_version <- "20230811-095752-5b8181d8"
 ```{cpp, echo=TRUE, eval=FALSE, output.var="epil", code=readLines("resources/naomi-aghq/epil.stan")}
 ```
 
+### NUTS convergence diagnostics
+
+#### `tmbstan` {#tmbstan-epil}
+
+Add diagnostics here.
+
+#### `rstan` {#rstan-epil}
+
+Add diagnostics here.
+
 ## Simplified Naomi model description {#naomi-math}
 
 This section describes the simplified version of the Naomi model [@eaton2021naomi] in complete detail.
