--- a/references.bib
+++ b/references.bib
@@ -2142,3 +2142,10 @@ doi = {10.1201/9781420072884-c30}
   year={2013},
   publisher={Wiley Online Library}
 }
+
+@article{fattah2021smart,
+  title={Smart Gradient--An Adaptive Technique for Improving Gradient Estimation},
+  author={Fattah, Esmail Abdul and Van Niekerk, Janet and Rue, H{\aa}vard},
+  journal={arXiv preprint arXiv:2106.07313},
+  year={2021}
+}
