--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -286,6 +286,10 @@ Rather than focusing on the aggregate nature of areal observations as primarily 
 <!-- Disaggregation is challenging without auxiliary information. -->
 <!-- A unified view on Bayesian varying coefficient models by Franco-Villoria et al. -->
 
+### The stochastic partial differential equation approximation
+
+This is a more computationally efficient way to implement integrated kernels.
+
 ## Simulation study
 
 We tested the ability of inferential models with varying spatial random effect specifications to accurately recover small-area quantities.
