--- a/92-appendixC.Rmd
+++ b/92-appendixC.Rmd
@@ -11,6 +11,11 @@ resource_version <- "20230811-095752-5b8181d8"
 ```{cpp, echo=TRUE, eval=FALSE, output.var="epil", code=readLines("resources/naomi-aghq/epil.cpp")}
 ```
 
+### Modified `TMB` C++ template {#tmb-modified-epil}
+
+```{cpp, echo=TRUE, eval=FALSE, output.var="epil", code=readLines("resources/naomi-aghq/epil.cpp")}
+```
+
 ### `Stan` C++ template {#stan-epil}
 
 ```{cpp, echo=TRUE, eval=FALSE, output.var="epil", code=readLines("resources/naomi-aghq/epil.stan")}
@@ -34,8 +39,8 @@ There are four sections:
 
 1. Section \@ref(naomi-process) gives the process specifications, giving the terms in each structured additive predictor, along with their distributions.
 2. Section \@ref(naomi-likelihood) gives additional details about the likelihood terms not provided in Section \@ref(naomi).
-3. Section \@ref(naomi-identifiability) gives 
-4. Section \@ref(naomi-implementation)
+3. Section \@ref(naomi-identifiability) gives identifiability constraints used in circumstances where incomplete data is available.
+4. Section \@ref(naomi-implementation) 
 
 ### Process specification {#naomi-process}
 
